--- a/allAnalysisChunksAdWords.Rmd
+++ b/allAnalysisChunksAdWords.Rmd
@@ -64,58 +64,17 @@ aYearAgo <- today() - days(365)
 #campaignPerformance <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=campaignPerformanceQuery)
 #names(campaignPerformance) <- c("Date","Campaign", "Conversions", "Cost")
 
-accountPerformanceQuery <- statement(select=c("Date","DayOfWeek","HourOfDay","Device","Clicks","Impressions",
-                                         "Conversions","Cost", "SearchImpressionShare", "AveragePosition",
-                                         "SearchRankLostImpressionShare","SearchBudgetLostImpressionShare",
-                                         "SearchExactMatchImpressionShare"),
-                         report="ACCOUNT_PERFORMANCE_REPORT",
-                         start=aYearAgo,
-                         end=yesterday)
-
-accountPerformance <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=accountPerformanceQuery)
-
-#
-#
-#chunk5Body <- statement(select=c('Date','Clicks','Conversions','CostPerConversion',
-#                                  'Cost','ConversionRate','AverageCpc','Impressions','Ctr'),
+#accountPerformanceQuery <- statement(select=c("Date","DayOfWeek","HourOfDay","Device","Clicks","Impressions",
+#                                         "Conversions","Cost", "SearchImpressionShare", "AveragePosition",
+#                                         "SearchRankLostImpressionShare","SearchBudgetLostImpressionShare",
+#                                         "SearchExactMatchImpressionShare"),
 #                         report="ACCOUNT_PERFORMANCE_REPORT",
 #                         start=aYearAgo,
 #                         end=yesterday)
 #
-#chunk5Data <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=chunk5Body)
-#
-#
-#chunk6Body <- statement(select=c("DayOfWeek","HourOfDay","Impressions","Conversions","CostPerConversion","SearchImpressionShare"),
-#                         report="ACCOUNT_PERFORMANCE_REPORT",
-#                         start=ninetyDaysAgo,
-#                         end=yesterday)
-#
-#chunk6Data <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=chunk6Body)
-#
-#chunk8Body <- statement(select=c("Date","AverageCpc","SearchRankLostImpressionShare","SearchBudgetLostImpressionShare",
-#                                  "SearchExactMatchImpressionShare","SearchImpressionShare"),
-#                         report="ACCOUNT_PERFORMANCE_REPORT",
-#                         start=ninetyDaysAgo,
-#                         end=yesterday)
-#
-#chunk8Data <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=chunk8Body)
-#
-#
-#chunk9Body <- statement(select=c('Conversions','Cost'),
-#                         report="ACCOUNT_PERFORMANCE_REPORT",
-#                         start=startOfCurrentMonth,
-#                         end=yesterday)
-#
-#chunk9Data <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=chunk9Body)
-#
-#
-#chunk10Body <- statement(select=c('Date','Device','Conversions','CostPerConversion',
-#                                  'ConversionRate','AverageCpc','Impressions','Ctr'),
-#                         report="ACCOUNT_PERFORMANCE_REPORT",
-#                         start=ninetyDaysAgo,
-#                         end=yesterday)
-#
-#chunk10Data <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=chunk10Body)
+#accountPerformance <- getData(clientCustomerId=customerId, google_auth=googleAuth, statement=accountPerformanceQuery)
+#names(accountPerformance) <- c("Date","DayOfWeek","HourOfDay","Device","Clicks","Impressions","Conversions","Cost","SearchIS",
+#                               "Position","RankLostIS","BudgetLostIS","ExactMatchIS")
 #
 #
 #chunk12Body <- statement(select=c("Date","CampaignName","AdGroupName","Criteria","Impressions","HasQualityScore","CreativeQualityScore",
@@ -233,9 +192,9 @@ plot_ly(data = campaignPerformance90, x = ~Cost, y = ~CPA, size = ~Conversions,
 
 # Metrics correlation plot
 
-```{r correlation plot, echo=FALSE, warning=FALSE, eval=TRUE}
+```{r correlation plot, echo=FALSE, warning=FALSE, eval=FALSE}
 
-correlationData <- accountPerformance %>% group_by(Day) %>%
+correlationData <- accountPerformance %>% group_by(Date) %>%
     summarise(Clicks = sum(Clicks), Conversions = sum(Conversions),
               CPA = sum(Cost)/sum(Conversions), Cost = sum(Cost),
               ConversionRate = sum(Conversions)/sum(Clicks),
@@ -253,44 +212,31 @@ corrplot(corr, method = "pie", type = "upper")
 
 # Ad Scheduling Heatmaps {.tabset}
 
-## Impressions
+```{r ad scheduling heatmaps, echo=FALSE, results="asis", eval=FALSE}
 
-```{r ad scheduling heatmap 1, echo=FALSE, eval=FALSE}
+accountPerformanceHeatmaps <- accountPerformance %>% filter(Date >= ninetyDaysAgo) %>% mutate(ImpIS = Impressions * SearchIS) %>%
+    group_by(DayOfWeek,HourOfDay) %>%
+    summarize(Impressions = sum(Impressions), Conversions = sum(Conversions), CPA = sum(Cost)/sum(Conversions),
+              ImpIS = sum(ImpIS, na.rm=TRUE)) %>% mutate(WeightedIS = ImpIS / Impressions)
 
-names(chunk6Data) <- c("DayOfWeek", "HourOfDay", "Impressions", "Conversions","CPA","SearchIS")
-
-chunk6Data$HourOfDay <- factor(chunk6Data$HourOfDay, levels=c(0:23))
-chunk6Data$DayOfWeek <- factor(chunk6Data$DayOfWeek, levels=c("Sunday","Saturday","Friday","Thursday","Wednesday","Tuesday","Monday"))
-
-ggplot(chunk6Data, aes(x=HourOfDay, y=DayOfWeek, z=Impressions)) + geom_tile(aes(fill = Impressions)) +
+accountPerformanceHeatmaps$HourOfDay <- factor(accountPerformanceHeatmaps$HourOfDay, levels=c(0:23))
+accountPerformanceHeatmaps$DayOfWeek <- factor(accountPerformanceHeatmaps$DayOfWeek,
+                                         levels=c("Sunday","Saturday","Friday","Thursday","Wednesday","Tuesday","Monday"))
+cat("\n\n## Impressions\n")
+ggplot(accountPerformanceHeatmaps, aes(x=HourOfDay, y=DayOfWeek, z=Impressions)) + geom_tile(aes(fill = Impressions)) +
     scale_fill_gradient(low="white", high="blue", labels=comma)
 
-```
-
-## Search Impression Share
-
-```{r ad scheduling heatmap 2, echo=FALSE, eval=FALSE}
-
-ggplot(chunk6Data, aes(x=HourOfDay, y=DayOfWeek, z=SearchIS)) + geom_tile(aes(fill = SearchIS)) +
-    scale_fill_gradient2(low="white", high="blue", labels=comma, midpoint=0.5)
-
-```
-
-## Conversions
-
-```{r ad scheduling heatmap 3, echo=FALSE, eval=FALSE}
-
-ggplot(chunk6Data, aes(x=HourOfDay, y=DayOfWeek, z=Conversions)) + geom_tile(aes(fill = Conversions)) +
+cat("\n\n## Search IS\n")
+ggplot(accountPerformanceHeatmaps, aes(x=HourOfDay, y=DayOfWeek, z=WeightedIS)) + geom_tile(aes(fill = WeightedIS)) +
     scale_fill_gradient(low="white", high="blue", labels=comma)
 
-```
+cat("\n\n## Conversions\n")
+ggplot(accountPerformanceHeatmaps, aes(x=HourOfDay, y=DayOfWeek, z=Conversions)) + geom_tile(aes(fill = Conversions)) +
+    scale_fill_gradient(low="white", high="blue", labels=comma)
 
-## CPA
-
-```{r ad scheduling heatmap 4, echo=FALSE, eval=FALSE}
-
-ggplot(chunk6Data[chunk6Data$CPA > 0,], aes(x=HourOfDay, y=DayOfWeek, z=CPA)) + geom_tile(aes(fill = CPA)) +
-    scale_fill_gradient2(low="white", high="blue", labels=comma, midpoint=50)
+cat("\n\n## CPA\n")
+ggplot(accountPerformanceHeatmaps, aes(x=HourOfDay, y=DayOfWeek, z=CPA)) + geom_tile(aes(fill = CPA)) +
+    scale_fill_gradient(low="white", high="blue", labels=comma)
 
 ```
 
@@ -490,20 +436,30 @@ plot_grid(pt_imp, pt_clicks, pt_ctr, pt_cpc, pt_cost, pt_conv, pt_cpa, pt_cr, nc
 
 ```{r impression share, echo=FALSE, eval=FALSE}
 
-names(chunk8Data) <- c("Day","CPC","ISLostToRank","ISLostToBudget","ExactMatchIS","IS")
+accountPerformanceIS <- accountPerformance %>% filter(Date >= ninetyDaysAgo) %>%
+    mutate(ImpIS = Impressions * SearchIS, ImpBudgetLostIS = Impressions * BudgetLostIS,
+           ImpRankLostIS = Impressions * RankLostIS,
+           ImpExactMatchIS = Impressions * ExactMatchIS) %>%
+    group_by(Date) %>%
+    summarize(CPC = sum(Cost, na.rm = TRUE)/sum(Clicks, na.rm = TRUE), ImpRankLostIS = sum(ImpRankLostIS, na.rm = TRUE),
+              ImpBudgetLostIS = sum(ImpBudgetLostIS, na.rm = TRUE), ImpIS = sum(ImpIS, na.rm=TRUE),
+              ImpExactMatchIS = sum(ImpExactMatchIS, na.rm = TRUE), Impressions = sum(Impressions, na.rm = TRUE)) %>%
+    mutate(IS = ImpIS / Impressions, ISLostToRank = ImpRankLostIS / Impressions,
+           ISLostToBudget = ImpBudgetLostIS / Impressions,
+           ExactMatchIS = ImpExactMatchIS / Impressions)
 
-long_chunk8 <- gather(chunk8Data, metric, value, CPC:IS)
+longAccountPerformanceIS <- gather(accountPerformanceIS, metric, value, CPC:ExactMatchIS)
 
-long_IS <- long_chunk8 %>% filter(metric %in% c("IS","ISLostToBudget","ISLostToRank"))
-long_other <- long_chunk8 %>% filter(metric %in% c("CPC","ExactMatchIS"))
-
-ggplot(long_other, aes(x = Day, y = value)) +
-    geom_line() +
-    facet_wrap(~metric, ncol=1)
+long_IS <- longAccountPerformanceIS %>% filter(metric %in% c("IS","ISLostToBudget","ISLostToRank"))
+long_other <- longAccountPerformanceIS %>% filter(metric %in% c("CPC","ExactMatchIS"))
 
 ggplot(long_IS) +
-    geom_area(aes(x = Day, y = value, fill = metric), position = "stack") +
+    geom_area(aes(x = Date, y = value, fill = metric), position = "stack") +
     theme(legend.position = "bottom")
+
+ggplot(long_other, aes(x = Date, y = value)) +
+    geom_line() +
+    facet_wrap(~metric, ncol=1)
 
 ```
 
@@ -511,12 +467,15 @@ ggplot(long_IS) +
 
 ```{r metrics pacing, echo=FALSE, fig.height=2, eval=FALSE} 
 
+accountPerformancePacing <- accountPerformance %>% filter(Date >= startOfCurrentMonth) %>%
+    summarize(Conversions = sum(Conversions), Cost = sum(Cost))
+
 paceConv <- (targetConversions/days_in_month(today())) * day(yesterday)
 paceCost <- (availableBudget/days_in_month(today())) * day(yesterday)
 
 allStats <- data.frame(stat = c("target","pace","current"),
-                       conversions = c(targetConversions, paceConv, chunk9Data$Conversions),
-                       cost = c(availableBudget, paceCost, chunk9Data$Cost))
+                       conversions = c(targetConversions, paceConv, accountPerformancePacing$Conversions),
+                       cost = c(availableBudget, paceCost, accountPerformancePacing$Cost))
 
 ggplot(data = allStats, aes(x = stat, y = conversions, fill = stat)) +
     geom_bar(stat = "identity", position = position_dodge(0.4), width = 0.5) +
@@ -534,9 +493,17 @@ ggplot(data = allStats, aes(x = stat, y = cost, fill = stat)) +
 
 ```{r device performance, echo=FALSE, eval=FALSE}
 
-long_chunk10 <- chunk10Data %>% gather(metric, value, Conversions:CTR)
+accountPerformanceDevice <- accountPerformance %>% filter(Date >= ninetyDaysAgo) %>%
+    group_by(Date, Device) %>%
+    summarize(Conversions = sum(Conversions, na.rm = TRUE), Cost = sum(Cost, na.rm = TRUE),
+              Clicks = sum(Clicks, na.rm = TRUE),
+              Impressions = sum(Impressions, na.rm = TRUE)) %>%
+    mutate(CPA = Cost / Conversions, ConversionRate = Conversions / Clicks,
+           CPC = Cost / Clicks, CTR = Clicks / Impressions)
 
-long_chunk10 %>% ggplot(aes(x = Day, y = value, color = Device)) +
+longAccountPerformanceDevice <- accountPerformanceDevice %>% gather(metric, value, Conversions:CTR)
+
+longAccountPerformanceDevice %>% ggplot(aes(x = Date, y = value, color = Device)) +
     geom_line() +
     facet_grid(metric ~ ., scales = "free_y") +
     theme(legend.position = "bottom")
